:recycle: Change before value on link anchors to prevent header overlapping

--- a/frontend/scss/base.scss
+++ b/frontend/scss/base.scss
@@ -30,8 +30,8 @@ html, body {
   visibility: hidden;
 
   @media screen and (min-width: 1024px) {
-    height: 80px;
-    margin-top: -80px;
+    height: 110px;
+    margin-top: -110px;
   }
 }
 
